[project]
name = "it-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.23",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph[visualization]>=0.4.5",
    "openai>=1.75.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "uvicorn>=0.34.2",
]
